--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .box_background {
-    background: url('/Site-Resposivo-Netflix/images/BACKGROUND.jpg') no-repeat 0 0;
+    background: url('https://gilmachadob.github.io/Site-Resposivo-Netflix/images/BACKGROUND.jpg') no-repeat 0 0;
     background-size: 100% 100%;
   
 }
